# ChangeLog for net-www/mod_mp3
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/mod_mp3/Attic/ChangeLog,v 1.3 2002/07/14 20:25:23 aliz Exp $

*mod_mp3-0.35-r1 (4 May 2002)

  14 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> mod_mp3-0.35-r1.ebuild :
  Added KEYWORDS.
  
  4 May 2002; Donny Davies <woodchip@gentoo.org> :

  Added LICENSE, SLOT, clarify the pkg_postinst message.

*mod_mp3-0.35 (9 Apr 2002)

  9 Apr 2002; Donny Davies <woodchip@gentoo.org> :

  New package to go along with the rewritten apache ebuild.