@@ -1,6 +1,12 @@
 # ChangeLog for net-www/mod_mp3
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/mod_mp3/Attic/ChangeLog,v 1.3 2002/07/14 20:25:23 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/mod_mp3/Attic/ChangeLog,v 1.4 2002/08/27 16:15:55 achim Exp $
+
+*mod_mp3-0.35-r2 (27 Aug 2002)
+
+  27 Aug 2002; Achim Gottinger <achim@gentoo.org> mod_mp3-0.35-r1.ebuild :
+
+  Added mysql support
 
 *mod_mp3-0.35-r1 (4 May 2002)
 
